--- a/App/Backend/package.json
+++ b/App/Backend/package.json
@@ -11,10 +11,12 @@
   "author": "Daniel Cogiel",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "nodemon": "^2.0.22",
     "typescript": "^5.0.4"
