--- a/App/Backend/package.json
+++ b/App/Backend/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "db-migrate": "^0.11.13",
+    "db-migrate-mysql": "^2.2.0",
     "express": "^4.18.2",
     "ts-node": "^10.9.1"
   },
