--- a/App/Backend/package.json
+++ b/App/Backend/package.json
@@ -15,11 +15,13 @@
     "db-migrate": "^0.11.13",
     "db-migrate-mysql": "^2.2.0",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/mysql": "^2.15.21",
     "nodemon": "^2.0.22",
     "typescript": "^5.0.4"
   }
