--- a/App/Backend/package.json
+++ b/App/Backend/package.json
@@ -11,6 +11,7 @@
   "author": "Daniel Cogiel",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "db-migrate": "^0.11.13",
     "db-migrate-mysql": "^2.2.0",
@@ -19,6 +20,7 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/mysql": "^2.15.21",
