--- a/App/Backend/package.json
+++ b/App/Backend/package.json
@@ -23,7 +23,9 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.7",
     "@types/mysql": "^2.15.21",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "typescript": "^5.0.4"
   }
