--- a/App/Backend/package.json
+++ b/App/Backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon src/index.ts",
     "build": "tsc --project ."
   },
@@ -23,10 +23,13 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.1",
     "@types/multer": "^1.4.7",
     "@types/mysql": "^2.15.21",
+    "jest": "^29.5.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
   }
 }
