--- a/App/Backend/package.json
+++ b/App/Backend/package.json
@@ -26,6 +26,7 @@
     "@types/jest": "^29.5.1",
     "@types/multer": "^1.4.7",
     "@types/mysql": "^2.15.21",
+    "dotenv": "^16.0.3",
     "jest": "^29.5.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
