--- a/App/Backend/package.json
+++ b/App/Backend/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "jest",
     "dev": "nodemon src/index.ts",
-    "build": "tsc --project ."
+    "build": "tsc --project .",
+    "start": "node dist/index.js"
   },
   "author": "Daniel Cogiel",
   "license": "ISC",
